--- a/templates/register.html
+++ b/templates/register.html
@@ -1,32 +1,26 @@
-import sqlite3
-from flask import Flask
-from flask import redirect, render_template, request
-from werkzeug.security import generate_password_hash
-import db
+<!DOCTYPE html>
+<html>
 
-app = Flask(__name__)
+<head>
+  <title>Rekisteröinti</title>
+</head>
 
-@app.route("/")
-def index():
-    return "Tähän tulee pelikokoelmasovellus"
+<body>
+  <form action="/create" method="post">
+    <p>
+      Tunnus: <br />
+      <input type="text" name="username" />
+    </p>
+    <p>
+      Salasana: <br />
+      <input type="password" name="password1" />
+    </p>
+    <p>
+      Salasana uudestaan: <br />
+      <input type="password" name="password2" />
+    </p>
+    <input type="submit" value="Luo tunnus" />
+  </form>
+</body>
 
-@app.route("/register")
-def register():
-    return render_template("register.html")
-
-@app.route("/create", methods=["POST"])
-def create():
-    username = request.form["username"]
-    password1 = request.form["password1"]
-    password2 = request.form["password2"]
-    if password1 != password2:
-        return "VIRHE: salasanat eivät ole samat"
-    password_hash = generate_password_hash(password1)
-
-    try:
-        sql = "INSERT INTO users (username, password_hash) VALUES (?, ?)"
-        db.execute(sql, [username, password_hash])
-    except sqlite3.IntegrityError:
-        return "VIRHE: tunnus on jo varattu"
-
-    return "Tunnus luotu"
+</html>
