Added a link to the registration page

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,12 @@
     </p>
     <input type="submit" value="Kirjaudu" />
   </form>
+  <p>
+    Luo uusi käyttäjä täällä:
+  </p>
+  <p>
+    <a href="/register">Luo tunnus</a>
+  </p>
   {% endif %}
 </body>
 
