Added link to retry registration after mismatched passwords

--- a/templates/password_match_error.html
+++ b/templates/password_match_error.html
@@ -10,6 +10,8 @@
     VIRHE: salasanat eivät ole samat
   </p>
   <p>
+    <a href="/register">Yritä rekisteröitymistä uudelleen</a>
+  </p>  <p>
     <a href="/">Palaa etusivulle</a>
   </p>
 </body>
