--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,9 @@
 </head>
 
 <body>
-  {% if session.username %}
+  {% if session.user_id %}
   <p>
-    Olet kirjautunut nimellä {{ session.username }}
+    Olet kirjautunut nimellä {{ session.user_id }}
   </p>
   <p>
     Pelien määrä: {{ count }}
@@ -27,18 +27,12 @@
     <a href="/logout">Kirjaudu ulos</a>
   </p>
   {% else %}
-  <form action="/login" method="post">
-    <p>
-      Tunnus: <br />
-      <input type="text" name="username" />
-    </p>
-    <p>
-      Salasana: <br />
-      <input type="password" name="password" />
-    </p>
-    <input type="submit" value="Kirjaudu" />
-  </form>
   <p>
+    Kirjaudu sisään täällä:
+  </p>
+  <p>
+    <a href="/login">Kirjaudu sisään</a>
+  </p>
     Luo uusi käyttäjä täällä:
   </p>
   <p>
